# regbuf

./: LICENSE  README.md  reg.c  reg.h  regbuf.c  regbuf.h
tests/: CMakeLists.txt  bugfix__does_not_wrap_around_when_offset_lands_at_end_of_last_region.c  bugfix__popping_length_of_partially_filled_region_moves_head_to_next_region.c  bugfix__unexpected_wrap_around.c  readme__example  reg_add__does_not_insert_elements_out_of_bounds_of_region.c  reg_add__fills_first_region_and_half_of_second.c  reg_add__fills_three_regions_and_ignores_overfill.c  reg_add__fills_two_regions_and_remaining_one.c  reg_add__first_time_places_elements_in_first_region.c  reg_add__remembers_where_it_left_off_in_new_region.c  reg_add__remembers_where_it_left_off_in_same_region.c  reg_add__when_current_region_fills_up_moves_to_next.c  reg_add__wraps_around_from_second_region_to_first.c  reg_add__wraps_around_if_space_is_free.c  reg_debug.inc.c  reg_destroy__use_after_free_detection.c  reg_get__copies_elements_to_pointer.c  reg_get__does_nothing_if_length_is_0.c  reg_get__removes_elements.c  reg_get__retrives_array_of_elements_in_two_regions.c  reg_get__wraps_around.c  reg_pop__does_not_clear_data_in_region.c  reg_pop__from_first_region_up_to_tail_in_second_region.c  reg_pop__next_add_continues_where_it_left_off.c  reg_pop__up_to_tail_in_first_region.c  reg_pop__wraps_around.c  regbuf_add__does_not_insert_elements_out_of_bounds_of_region.c  regbuf_add__fills_first_region_and_half_of_second.c  regbuf_add__fills_three_regions_and_ignores_overfill.c  regbuf_add__fills_two_regions_and_remaining_one.c  regbuf_add__first_time_places_elements_in_first_region.c  regbuf_add__remembers_where_it_left_off_in_new_region.c  regbuf_add__remembers_where_it_left_off_in_same_region.c  regbuf_add__when_current_region_fills_up_moves_to_next.c  regbuf_add__wraps_around_from_second_region_to_first.c  regbuf_add__wraps_around_if_space_is_free.c  regbuf_debug.inc.c  regbuf_destroy__use_after_free_detection.c  regbuf_free__decreases_when_elements_are_added.c  (+30 more)
